--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,14 +22,11 @@ layout: compress
     </div>
     <canvas></canvas>
     <!--音乐律动-->
-    <div class="kePublic" style="background: red;">
-      <!--效果html开始-->
+    <div class="kePublic">
       <canvas id="canvas" width="800" height="350"></canvas>
-      <br>
-      <br>
-      <audio src="{{ site.url }}/images/suqian.mp3" autoplay="autoplay" id="audio" controls="" loop="">audio element not supported</audio>
-      <div class="clear"></div>
+      <audio src="{{ site.url }}/images/suqian.mp3" autoplay="autoplay" id="audio"  loop></audio>
     </div>
+    <img src="{{ site.url }}/images/music_on.png" id="music" />
   </div>
 <!--结束-->
   <div class="block-right">
