--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: compress
       <canvas id="canvas" width="800" height="350"></canvas>
       <audio src="{{ site.url }}/images/suqian.mp3" autoplay="autoplay" id="audio"  loop></audio>
     </div>
-    <img src="{{ site.url }}/images/music_on.png" id="music" />
+    <img src="{{ site.url }}/images/music_on.png" id="music" class="on"/>
   </div>
 <!--结束-->
   <div class="block-right">
