--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,6 +26,7 @@ layout: compress
       <canvas id="canvas" width="800" height="350"></canvas>
       <audio src="{{ site.url }}/images/suqian.mp3" autoplay="autoplay" id="audio"  loop></audio>
     </div>
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://music.163.com/outchain/player?type=2&id=440353010&auto=1&height=66"></iframe>
     <img src="{{ site.url }}/images/music_on.png" id="music" class="on"/>
   </div>
 <!--结束-->
