--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -905,3 +905,10 @@ canvas {
     transform: rotate(360deg);
   }
 }
+.kePublic{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50%;
+  height: 50%;
+}
