--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: compress
     <!--音乐律动-->
     <div class="kePublic">
       <canvas id="canvas" width="800" height="350"></canvas>
-      <audio src="{{ site.url }}/images/suqian.mp3" autoplay="autoplay" id="audio"  loop></audio>
+      <audio src="http://mp3.haoduoge.com/s/2016-11-14/1479106818.mp3" autoplay="autoplay" id="audio"  loop></audio>
     </div>
     <img src="{{ site.url }}/images/music_on.png" id="music" class="on"/>
   </div>
