--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,9 +33,12 @@ layout: compress
     <a href="{{ site.url }}/posts" title="posts" class="posts-menu-icon"></a>
     <span class="posts-link">POSTS</span>
     <a title="project" class="projects-menu-icon">
-      <span></span>
+      <span class="projects-link">PROJECTS</span>
     </a>
-    <span class="projects-link">PROJECTS</span>
+    <!--////个人简历-->
+    <a title="vitae" class="vitae-menu-icon" href="vitae.html">
+      <span>VITAE</span>
+    </a>
     <div class="content">
       <div class="about-info">
         {{ content }}
