--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -915,3 +915,40 @@ canvas {
   width: 100%;
   height: 50%;
 }
+///11.25
+.vatae-menu-icon {
+  position: absolute;
+  top: 30px;
+  right: 150px;
+  width: 20px;
+  height: 25px;
+  border: 2px solid $gray;
+  background: $white;
+  &:before {
+    content: '';
+    width: 20px;
+    height: 25px;
+    position: absolute;
+    right: 2px;
+    border: 2px solid $gray;
+    top: 2px;
+    background: $white;
+  }
+  &:after {
+    content: '';
+    width: 20px;
+    height: 25px;
+    border: 2px solid $gray;
+    position: absolute;
+    right: 6px;
+    top: 6px;
+    background: $white;
+  }
+  &:hover {
+    border-color: $green;
+    &:before,
+    &:after {
+      border-color: $green;
+    }
+  }
+}
