--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,8 +33,9 @@ layout: compress
     <a href="{{ site.url }}/posts" title="posts" class="posts-menu-icon"></a>
     <span class="posts-link">POSTS</span>
     <a title="project" class="projects-menu-icon">
-      <span class="projects-link">PROJECTS</span>
+      <span></span>
     </a>
+    <span class="projects-link">PROJECTS</span>
     <!--////个人简历-->
     <a title="vitae" class="vitae-menu-icon" href="vitae.html">
       <span>VITAE</span>
