--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -916,7 +916,7 @@ canvas {
   height: 50%;
 }
 ///11.25
-.vatae-menu-icon {
+.vitae-menu-icon {
   position: absolute;
   top: 30px;
   right: 150px;
