--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,8 +38,9 @@ layout: compress
     <span class="projects-link">PROJECTS</span>
     <!--////个人简历-->
     <a title="vitae" class="vitae-menu-icon" href="vitae.html">
-      <span>VITAE</span>
+      <span></span>
     </a>
+    <span>VITAE</span>
     <div class="content">
       <div class="about-info">
         {{ content }}
