--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@ layout: compress
     </a>
     <span class="projects-link">PROJECTS</span>
     <!--////个人简历-->
-    <a title="vitae" class="vitae-menu-icon" href="vitae.html">
+    <a title="vitae" class="vitae-menu-icon" href="../about/vitae.html">
       <span  class="projects-link">VITAE</span>
     </a>
 
