--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,11 +36,11 @@ layout: compress
       <span></span>
     </a>
     <span class="projects-link">PROJECTS</span>
-    <!--////个人简历-->
-    <a title="vitae" class="vitae-menu-icon" href="../about/vitae.html">
-      <span  class="projects-link">VITAE</span>
-    </a>
-
+    <!--&lt;!&ndash;////个人简历&ndash;&gt;-->
+    <!--<a title="vitae" class="vitae-menu-icon" href="vitae.html">-->
+      <!--<span></span>-->
+    <!--</a>-->
+    <!--<span  class="projects-link">VITAE</span>-->
     <div class="content">
       <div class="about-info">
         {{ content }}
